--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -7,5 +7,6 @@
   "home_card_subtitle": "Shortened URL",
   "home_input_hint": "Insert url",
   "home_send_url_error": "Error shortening this URL",
+  "home_send_empty_url_error": "Please enter a URL",
   "home_body_description": "Enter the url in the field below and click the button at the bottom of the page to generate a shortcut."
 }
